[package]
name = "one-of-many-proofs"
version = "0.1.0"
authors = ["cargodog <cargodog@protonmail.com>"]
edition = "2018"
description = "Implementation of one-of-many zero-knowledge membership proofs."
license-file = "LICENSE"
repository = "https://github.com/cargodog/one-of-many-proofs"

[dependencies]
rand = "0.7"
polynomials = "0.2"

[dependencies.curve25519-dalek]
default-features = false
version = "3"
features = ["simd_backend", "nightly", "serde", "alloc"]

[dependencies.blake2]
default-features = false
version = "0.9"

[dependencies.merlin]
default-features = false
version = "2"

[dependencies.serde]
default-features = false
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = "0.3"
serde_cbor = "0.11"

[features]
default = ["std", "serde"]
std = []

[[bench]]
name = "proof_benchmarks"
harness = false
